# KGCL-on-USPTO

./: .gitignore  KGCL_CODE_EXPLANATION.py  KGCL_CODE_SUMMARY.md  README.md  canonicalize_prod.py  eval-full.py  eval-rtacc.py  eval.py  prepare_data.py  preprocess.py  pyproject.toml  summary.md  train.py
KGembedding/: fg2emb.pkl
KGembedding_2/: fg2emb.pkl
docs/superpowers/plans/: 2026-06-22-package-refactor.md
models/: KGCL.py  __init__.py  beam_search.py  encoder.py  model_utils.py
src/kgcl_retro/: __init__.py  paths.py
src/kgcl_retro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/kgcl_retro/chemistry/: __init__.py  actions.py  apply.py  atom_mapping.py  chem.py  edits.py  features.py  functional_groups.py  graphs.py
src/kgcl_retro/cli/: __init__.py  canonicalize_products.py  eval.py  eval_50k.py  eval_full.py  eval_roundtrip.py  import_uspto_mit.py  prepare_data.py  preprocess.py  train.py
src/kgcl_retro/data/: __init__.py  collate.py  dataset_config.py  datasets.py
src/kgcl_retro/losses/: __init__.py  adnce.py
src/kgcl_retro/models/: __init__.py  beam_search.py  encoder.py  kgcl.py  utils.py
tests/: conftest.py  smoke_test.py  test_assets.py  test_documentation_data_sources.py  test_edit_labels.py  test_imports.py  test_model_config.py  test_uspto_mit_support.py
tmp/pdfs/: 34782_text.txt
utils/: ADNCE.py  __init__.py  attn_layer.py  chem.py  collate_fn.py  datasets.py  generate_edits.py  mol_features.py  reaction_actions.py  rxn_graphs.py
